# comet

./: .coveragerc  .gitattributes  .gitignore  LICENSE  README.md  README.rst  pyproject.toml  readthedocs.yaml
.github/workflows/: ci.yml  tests.yml
docs/source/: README.rst  conf.py  index.rst  links.rst
docs/source/api/: data.rst
docs/source/contribute/: contributions.rst
docs/source/overview/: introduction.rst
docs/source/sections/: _static  api.rst  contribute.rst  installation.rst  overview.rst  tutorials.rst  usage.rst
docs/source/usage/: quickstart.rst
src/comet/: __init__.py  bids.py  cifti.py  connectivity.py  data.py  data_bids.py  data_cifti.py  graph.py  gui.py  hcp.py  methods.py  multiverse.py  network.py  state_methods.py  utils.py
src/comet/data/: cantone.csv  hurricane.tsv  simulation.mat  simulation.pkl  single_state.txt  template_script.py  time_series.txt  time_series_multiple.npy
src/comet/example_data/: simulation.txt
src/comet/resources/: simulation.txt
tests/: connectivity.py  test_cifti.py  test_connectivity.py  test_graph.py  test_utils.py
tests/MATLAB/: README.md  combine.py  create_dcc.m  create_ets.m  create_fls.m  create_leida.m
tests/files/: adj.txt  network_measures.mat
tutorials/: example_abide.ipynb  example_analysis.ipynb  example_cifti.ipynb  example_dfc.ipynb  example_dfc_cont.ipynb  example_dfc_prep1.ipynb  example_dfc_prep2.ipynb  example_dfc_prep3.ipynb  example_dfc_state.ipynb  example_dfc_state1.ipynb  example_dfc_state2.ipynb  example_dfc_state3.ipynb  example_eeg.ipynb  example_fmri.ipynb  example_graph.ipynb  example_graph_benchmark.ipynb  example_graph_eff.ipynb  example_gui.ipynb  example_multiverse.ipynb  example_multiverse_advanced.ipynb  example_mv_abide.ipynb  example_mv_basics.ipynb  example_mv_eeg_sim.ipynb  example_mv_features.ipynb  example_mv_fmri_sim.ipynb  example_mv_hpc.ipynb  example_mv_hurricane.ipynb  example_mv_integration.ipynb  example_mv_load.ipynb  example_mv_plot.ipynb  example_mv_recipes.ipynb  example_mv_structure.ipynb  example_simulation.ipynb  example_state.ipynb
tutorials/advanced_multiverse/: multiverse_summary.csv
tutorials/advanced_multiverse/results/: forking_paths.pkl
tutorials/data/: aomic_multi.pkl  xcpd.tsv
tutorials/example_decisions/: template.py
tutorials/example_decisions/results/: forking_paths.pkl  multiverse_summary.csv  universe_1.pkl  universe_2.pkl
tutorials/example_eeg/: template.py
tutorials/example_eeg/results/: forking_paths.pkl  multiverse_results.pkl  multiverse_summary.csv  universe_1.pkl  universe_10.pkl  universe_100.pkl  universe_101.pkl  universe_102.pkl  universe_103.pkl  universe_104.pkl  universe_105.pkl  universe_106.pkl  universe_107.pkl  universe_108.pkl  universe_109.pkl  universe_11.pkl  universe_110.pkl  universe_111.pkl  universe_112.pkl  universe_113.pkl  universe_114.pkl  universe_115.pkl  universe_116.pkl  universe_117.pkl  universe_118.pkl  universe_119.pkl  universe_12.pkl  universe_120.pkl  universe_121.pkl  universe_122.pkl  universe_123.pkl  universe_124.pkl  universe_125.pkl  universe_126.pkl  universe_127.pkl  universe_128.pkl  universe_129.pkl  universe_13.pkl  universe_130.pkl  universe_131.pkl  (+143 more)
tutorials/example_eeg/scripts/: universe_10.py  universe_100.py  universe_101.py  universe_102.py  universe_104.py  universe_107.py  universe_109.py  (+53 more)
tutorials/example_fmri/: multiverse_summary.csv  template.py
tutorials/example_multiverse/: multiverse_summary.csv  universe_1.py  universe_10.py  universe_11.py  universe_12.py  universe_13.py  universe_14.py  universe_15.py  universe_16.py  universe_17.py  universe_18.py  universe_19.py  universe_2.py  universe_20.py  universe_21.py  universe_22.py  universe_23.py  universe_24.py  universe_25.py  universe_26.py  universe_27.py  universe_28.py  universe_3.py  universe_4.py  universe_5.py  universe_6.py  universe_7.py  universe_8.py  universe_9.py
tutorials/example_mv_abide/: multiverse_summary.csv  template.py
tutorials/example_mv_basics/: multiverse_summary.csv
tutorials/example_mv_eeg_sim/: multiverse_summary.csv
tutorials/example_mv_fmri_sim/: multiverse_summary.csv
tutorials/example_mv_recipes/: multiverse_summary.csv
tutorials/example_mv_structure/: multiverse_summary.csv
tutorials/multiverse/: universe_1.py  universe_10.py  universe_11.py  universe_12.py  universe_13.py  universe_14.py  universe_15.py  universe_16.py  universe_17.py  universe_18.py  universe_19.py  universe_2.py  universe_20.py  universe_21.py  universe_22.py  universe_23.py  universe_24.py  universe_25.py  universe_26.py  universe_27.py  universe_28.py  universe_29.py  universe_3.py  universe_30.py  universe_31.py  universe_32.py  universe_33.py  universe_34.py  universe_35.py  universe_36.py  universe_37.py  universe_38.py  universe_39.py  universe_4.py  universe_40.py  universe_41.py  universe_42.py  universe_43.py  universe_44.py  universe_45.py  (+56 more)
tutorials/multiverse_fmri/: template.py
(+678 files in other folders)
