[project]
name = "comet-toolbox"
version = "0.9.9c"
authors = [
  {name="Micha Burkhardt", email="micha.burkhardt@uol.de"},
]
description = "Dynamic functional connectivity toolbox for multiverse analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11, <3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy >= 2.3.4",
  "scipy >= 1.16.3",
  "nilearn >= 0.12.1",
  "pybids >= 0.21.0",
  "scikit-learn >= 1.7.2",
  "statsmodels >= 0.14.5",
  "matplotlib >= 3.10.7",
  "nibabel >= 5.3.2",
  "pandas >= 2.3.3",
  "pycwt >= 0.5.0b0",
  "mat73 >= 0.65",
  "bctpy >= 0.6.1",
  "joblib >= 1.5.2",
  "tqdm_joblib >= 0.0.5",
  "jinja2 >= 3.1.6",
  "tqdm >= 4.67.1",
  "numba >= 0.62.1",
  "importlib_resources >= 6.5.2",
  "seaborn >= 0.13.2",
  "networkx >= 3.5",
  "pydfc >=1.0.7",
  "hmmlearn >= 0.3.3",
  "ksvd >= 0.0.3",
  "ipykernel >= 7.1.0",
  "ipywidgets >= 8.1.8",
  "notebook >= 7.4.7",
  "pyqt6 >= 6.10.0",
  "qdarkstyle >= 3.2.3"
]

[project.optional-dependencies]
doc = [
  "sphinx >= 5.3.0",
  "nbsphinx >= 0.9.4",
  "sphinx_rtd_theme >= 1.0.0",
  "sphinx-autodoc-typehints >= 1.14.0",
]

tests = [
  "pytest >= 9.0.0",
  "teneto >= 0.5.3"
]


[project.urls]
Homepage = "https://github.com/mibur1/comet"
Issues = "https://github.com/mibur1/comet/issues"

[project.scripts]
comet-gui = "comet.gui:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comet"]

[tool.hatch.build]
exclude = [
  "tutorials/**",
  "docs/**",
  "tests/**"]
