[project]
name = "comet-toolbox"
version = "0.9.10"
authors = [
  {name="Micha Burkhardt", email="micha.burkhardt@uol.de"},
]
description = "Dynamic functional connectivity toolbox for multiverse analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11, <3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  # Scientific stack
  "numpy >= 2.3.4",
  "scipy >= 1.16.3",
  "scikit-learn >= 1.7.2",
  "statsmodels >= 0.14.5",
  "pandas >= 2.3.3",
  "mat73 >= 0.65",
  "jinja2 >= 3.1.6",
  "joblib >= 1.5.2",
  "numba >= 0.62.1",
  "importlib_resources >= 6.5.2",
  # fMRI
  "nilearn >= 0.12.1",
  "pybids >= 0.21.0",
  "nibabel >= 5.3.2",
  # Networks
  "bctpy >= 0.6.1",
  "networkx >= 3.5",
  # Plotting
  "matplotlib >= 3.10.7",
  "seaborn >= 0.13.2",
  # Connectivity methods
  "pycwt >= 0.5.0b0",
  "hmmlearn >= 0.3.3",
  "ksvd >= 0.0.3",
  # Notebooks
  "ipykernel >= 7.1.0",
  "ipywidgets >= 8.1.8",
  "notebook >= 7.4.7",
  # Progress bars
  "tqdm >= 4.67.1",
  "tqdm_joblib >= 0.0.5",
  # GUI
  "pyqt6 >= 6.10.0",
  "qdarkstyle >= 3.2.3"
]

[project.optional-dependencies]
doc = [
  # Documentation
  "sphinx >= 8.1.3",
  "nbsphinx >= 0.9.6",
  "sphinx_rtd_theme >= 3.0.2",
  "sphinx-autodoc-typehints >= 1.14.0",
]

test = [
  # Tests
  "pytest >= 9.0.0",
  "pydfc >=1.0.7",
  "teneto >= 0.5.3"
]

build = [
  # Build tools
  "build >= 1.3.0",
  "hatchling >=1.27.0",
  "twine >= 6.2.0"
]

[project.urls]
Homepage = "https://github.com/mibur1/comet"
Issues = "https://github.com/mibur1/comet/issues"

[project.scripts]
comet-gui = "comet.gui:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comet"]

[tool.hatch.build]
exclude = [
  "tutorials/**",
  "docs/**",
  "tests/**"]
